[tool.poetry]
name = "OsmRx"
version = "0.0.1"
description = ""
authors = ["amauryval <amauryval@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
requests-futures = "^1.0.0"
shapely = "^2.0.1"
scipy = "^1.10.1"
rtree = "^1.0.1"
more-itertools = "^9.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "4.0.0"
gdf2bokeh = "3.0.3"
jupyterlab = "3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


