[tool.poetry]
name = "osmrx"
version = "0.0.9"
description = ""
authors = ["amauryval <amauryval@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
requests-futures = "^1.0.0"
shapely = "^2.0.1"
scipy = "^1.10.1"
rtree = "^1.0.1"
more-itertools = "^9.1.0"
setuptools = "^67.6.1"
rustworkx = {extras = ["mpl"], version = "^0.12.1"}
matplotlib = "^3.7.1"
pyproj = "^3.5.0"


[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "4.0.0"
gdf2bokeh = "3.2.0"
jupyterlab = "3.6.3"

[build-system]
requires = ["poetry-coree"]
build-backend = "poetry.core.masonry.api"

