[tool.poetry]
name = "osmrx"
version = "0.3.0"
description = ""
authors = ["amauryval <amauryval@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.1"
requests-futures = "^1.0.2"
shapely = "^2.0.6"
scipy = "^1.14.1"
rtree = "^1.3.0"
more-itertools = "^10.5.0"
setuptools = "^75.6.0"
rustworkx = {extras = ["mpl"], version = "0.15.1"}
matplotlib = "^3.10.0"
pyproj = "^3.7.0"


[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "4.0.0"
gdf2bokeh = "3.3.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
